Some refactoring and new functionality